# fast-aiogentic

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  fastagent.config.yaml  pyproject.toml
.github/workflows/: ci-cd.yml
prompts/: SYSTEM_PROMPT.md
src/fast_aiogentic/: __init__.py  agent_bridge.py  config.py  handlers.py  main.py  text_utils.py  tool_handler.py
src/fast_aiogentic/api/: main.py
tests/: test_smoke.py
