[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fast-aiogentic"
version = "0.1.0"
description = "Python 3.13 project: fast-aiogentic"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    { name = "Developer", email = "dev@example.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "ruff>=0.9",
    "ty>=0.0.1a1",
    "pre-commit>=3.0",
]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
]
api = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.30",
    "httpx>=0.25",
]

[tool.hatch.build.targets.wheel]
packages = ["src/fast_aiogentic"]

[tool.ruff]
line-length = 120
target-version = "py313"
exclude = [
    ".git",
    ".venv",
    "build",
    "dist",
    "__pycache__",
]

[tool.ruff.lint]
# 22 rule categories for production standards
select = [
    "E", "W", "F",           # pycodestyle + pyflakes
    "I", "TID", "TCH",       # imports + ban-relative-imports + type-checking
    "BLE", "TRY", "EM", "RSE", # exceptions
    "N", "UP", "B", "A",     # naming, pyupgrade, bugbear, builtins
    "C4", "C901", "SIM",     # comprehensions, complexity, simplify
    "RUF", "PL", "PIE",      # ruff, pylint, pie
    "PERF", "FURB", "RET",   # performance, refurb, return
    "DTZ", "ANN401",         # datetime, Any typing
    "FIX", "ERA", "T10",     # fixme, eradicate, debugger
    "PTH", "LOG", "G", "PT", # pathlib, logging, pytest
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # Allow asserts in tests

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ty.rules]
# ty: 80x faster strict type checking (replaces mypy)
unresolved-import = "error"
unresolved-reference = "error"
invalid-assignment = "error"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-v",
    "--strict-markers",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/migrations/*"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
